# revlogica-orchestrator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
app/: main.py
app/application/interfaces/: existdb_repository_interface.py
app/application/services/: existdb_service.py  nlp_service.py
app/domain/: exceptions.py
app/infrastructure/: config.py
app/infrastructure/repositories/: existdb_repository.py
app/presentation/: dependencies.py
app/presentation/endpoints/manuscripts/: manuscript.py
app/presentation/handlers/: exceptions.py
app/presentation/schema/: manuscript.py  nlp.py
