# =====================================
# This file is part of the CodeDev project
# Author: Ricel Quispe
# =====================================

# pyproject.toml
# This file is managed by Poetry
# For more information, see: https://python-poetry.org/docs/pyproject/toml/

[tool.poetry]
name = "verilogica_orchestrator"
version = "0.1.0"
description = "VeriLogica Orchestrator for the RevLogLogic project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic = {version = "^2.11.7", extras = ["email"]} # pydantic[email] is for email validation
pydantic-settings = "^2.10.1"
requests = "^2.32.5"
httpx = "^0.28.0"
aiohttp = "^3.12.15"
python-multipart = "^0.0.20"
lxml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.3.0"
